# LMCache-Ascend

./: .gitignore  .gitmodules  CMakeLists.txt  LMCACHE_v0312_to_v042_DIFF_SUMMARY.md  README.md  pyproject.toml  requirement_ms.txt  requirements.txt  setup.py
.claude/skills/upgrade-lmcache-ascend-version/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/junit-summary/: action.yml
.github/workflows/: build-a2-check.yml  build-and-test-mindspore.yml  build-and-test.yml  code-quality.yml  code_quality_checks.yml  e2e-vllm-test.yml  perf-and-accuracy.yml  report-test-results.yml
benchmark/v1/rag/: README.md  analysis.py  offline.sh  online.sh  rag.py  utils.py
csrc/: CMakeLists.txt  cachegen_kernels.cpp  cachegen_kernels.h  framework_hal.cpp  mem_kernels.cpp  mem_kernels.h  mem_register.cpp  mem_register.h  pac_kernels.cpp  pac_kernels.h  pos_kernels.cpp  pos_kernels.h  pybind.cpp  utils.cpp  utils.h
csrc/common/: dcmi_management.cpp  dcmi_management.h  exception.h  framework_hal.h  hcomm_devva.cc  hcomm_devva.h  managed_mem.cpp  managed_mem.h  mem_alloc.cpp
csrc/hccl/: CMakeLists.txt  bindings.cpp  hccl_agent.cpp  hccl_agent.h  hccl_utils.cpp  hccl_utils.h
csrc/hcomm_onesided/: CMakeLists.txt  bindings.cpp  hccl_mem_defs.h
csrc/hixl/: CMakeLists.txt  bindings.cpp  hcomm_devva.cc  hcomm_devva.h
csrc/mindspore/: CMakeLists.txt  dcmi_management.cpp  dcmi_management.h  framework_hal.cpp  framework_hal.h  managed_mem.cpp  managed_mem.h  managed_numpy.cpp  managed_numpy.h  mem_alloc.cpp  mem_alloc.h  mem_kernels.cpp  mem_kernels.h  pinned_mem.cpp  pinned_mem.h  pybind.cpp  threading.h  utils.cpp
docker/: Dockerfile.310p.openEuler  Dockerfile.a2.openEuler  Dockerfile.a3  Dockerfile.a3.openEuler  build-ci.sh  lmcache-controller.diff  vllm-sched.diff
docker/mindspore/: Dockerfile.310p.openEuler  Dockerfile.a2.openEuler
docs/: ascend_p2p_backend.md  ascend_pd_backend.md  deployment.md
docs/cachegen/: Cachegen.md
docs/internal_api_server/: prefetch_evict_apis.md
examples/: offload.py
examples/blending/: README.md  patch_vllm_ascend.py  patch_vllm_npu_worker.py  reuse.py  script.py
examples/disagg_prefill/1p1d/: README.md
examples/memory_apis/: prefetch_evict.yaml
lmcache_ascend/: __init__.py
lmcache_ascend/integration/patch/: apply_patch.py  base_patcher.py
lmcache_ascend/integration/sglang/: sglang_adapter.py
lmcache_ascend/integration/vllm/: lmcache_ascend_connector_v1.py  multi_group_vllm_adapter.py  multi_spec_flatten.py  skip_state_groups.py  utils.py  vllm_service_factory.py  vllm_v1_adapter.py
lmcache_ascend/mindspore/: __init__.py  usage_context.py  utils.py
lmcache_ascend/mindspore/v1/: _tensor.py  cache_engine.py  memory_management.py  npu_connector.py  protocol.py  system_detection.py  token_database.py
lmcache_ascend/serde/: pac.py
lmcache_ascend/v1/: cache_engine.py  config.py  kv_format.py  kv_layer_groups.py  memory_management.py  npu_connector.py  pd_proxy_memory_obj.py  proxy_memory_obj.py  rpc_utils.py  slot_mapping_utils.py  system_detection.py  token_database.py  transfer_context.py
lmcache_ascend/v1/blend/: __init__.py  blender.py  cacheblend_patch.diff  positional_encoding.py  utils.py
lmcache_ascend/v1/cache_controller/: worker.py
lmcache_ascend/v1/gpu_connector/: __init__.py  npu_connectors.py
lmcache_ascend/v1/internal_api_server/: __init__.py
lmcache_ascend/v1/lookup_client/: lmcache_ascend_async_lookup_client.py  lmcache_async_lookup_client.py  lmcache_lookup_client.py
lmcache_ascend/v1/multiprocess/: custom_types.py  server.py
lmcache_ascend/v1/npu_connector/: __init__.py  npu_connectors.py  utils.py
lmcache_ascend/v1/storage_backend/: __init__.py  p2p_backend.py  pd_backend.py  storage_manager.py  utils.py
lmcache_ascend/v1/transfer_channel/: __init__.py  base_channel.py  buffer_config.py  hccl_agent.py  hccl_channel.py  hcomm_onesided_channel.py  hcomm_onesided_protocol.py  hcomm_onesided_runtime.py  hixl_channel.py  hixl_engine.py  hixl_protocol.py  (+1 more)
new_kernels/: multi_layer_mem_kernels_v2_multi_plane.cpp
tests/: bootstrap.py  conftest.py  pytest.ini  test_version_integrity.py
tests/disagg/: test_hccl_channel_write.py
tests/mindspore/: conftest.py
tests/v1/: conftest_ds4.py  conftest_kvcache.py  pos_kernels_performance.py  test_cache_engine.py  test_cache_policy.py  test_cachegen_kernels.py  test_config.py  test_connector.py  test_ds4_kvcache_roundtrip.py  test_freeze_mode_integration.py  test_kv_layer_groups_manager.py  test_kv_layer_groups_npu.py  test_layer_to_scheduler_group_mapping.py  test_lazy_memory_allocator.py  test_mem_kernels.py  test_memory_management.py  test_multi_group_vllm_adapter.py  test_npu_connector.py  test_npu_connector_mixed_format.py  test_npu_connector_multi_group_load.py  test_npu_connector_utils.py  test_pac_coder.py  test_per_group_memory_allocation.py  test_pos_kernels.py  test_remote_metadata.py  test_remote_mla_worker_id_as0.py  test_skip_state_groups.py  test_token_database.py  utils.py
(+71 files in other folders)
